# Numerical-Methods

./: MatrixUtilities.h  README.md  StringUtilities.h
2_LinearEquations/: LUDecomposition.h  MatrixUtilities.h  QRDecomposition.h  QRGramSchmidt.h  QRTest.cxx  QRsolveCheck.cxx  mainTest.cxx  primTest.cxx  simpleTest.cxx
3_Eigenstuff/: JacobiEigval.cxx  JacobiEigval.h
4_LinearLeastSquares/: LeastSquares.h  mainTest.cxx
5_NonlinearEquations/: EBFunction.h  EBParser.h  NewtonRaphson.h  funcTest.cxx  mainTest.cxx  parseTest.cxx  primTest.cxx
7_ODEs/build_both/: cmake_install.cmake  eulerProject
7_ODEs/build_euler/: CMakeCache.txt  Makefile
7_ODEs/odes/: CMakeLists.txt
7_ODEs/odes/build_both/: CMakeCache.txt  Makefile  rk4Project
7_ODEs/odes/build_euler/: cmake_install.cmake
EBlib/: EBFunction.h  EBParser.h  funcTest.cxx  newTest.cxx  parseTest.cxx  stringTest.cxx
EBlib/EBlin/: ebmatrix.h
EBlib/EBlin/complex/: complex.h
EBlib/EBlin/vector/: ebvector.h
Old/: Euler.cpp  Finite_Difference.m  Finite_Difference.py  euler.cpp  rk4.cpp
ROOT/: CMakeLists.txt  ROOTEquations.cxx  ROOTIntegration.cxx  ROOTLinearAlgebra.cxx  ROOTMyFuncs.cxx  ROOTTree.cxx
ROOT/build2/: CMakeCache.txt
eblin/complex/: complextest.cpp
eblin/vector/: ebtest.cpp  ebvector_old.h
eblin/vector3d/: ebvector3d.h  ebvector3dtest.cpp
eblin/vectorptr/: ebnvectortest.cpp
